--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next-i18next": "^11.0.0",
     "next-pwa": "^5.6.0",
     "next-sitemap": "^3.1.23",
+    "next-themes": "^0.2.1",
     "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-chartjs-2": "^4.3.1",
