--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "canvas2svg": "^1.0.16",
     "chart.js": "^3.9.1",
     "chartjs-adapter-luxon": "^1.2.0",
+    "chartjs-chart-geo": "3.10.0",
     "chartjs-plugin-annotation": "^2.0.1",
     "chartjs-plugin-crosshair": "^1.2.0",
     "highlight.js": "^11.6.0",
