--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chartjs-chart-geo": "3.10.0",
     "chartjs-plugin-annotation": "^2.0.1",
     "chartjs-plugin-crosshair": "^1.2.0",
+    "d3-scale-chromatic": "^3.0.0",
     "highlight.js": "^11.6.0",
     "leaflet": "^1.9.1",
     "lodash": "^4.17.21",
