fix: map osm wrap

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,17 @@
 APP_URL=http://localhost:3000
 REVALIDATE_TOKEN=
 
-# Aksara Frontend
+# datagovmy Frontend
 NEXT_PUBLIC_APP_URL=$APP_URL
 
-# Aksara Backend
+# datagovmy Backend
 NEXT_PUBLIC_AUTHORIZATION_TOKEN=
 NEXT_PUBLIC_API_URL=
 
-# Google ?
-NEXT_PUBLIC_GMAP_API_KEY=
 NEXT_PUBLIC_GA_TAG=
 
-# OpenSourceMap
-NEXT_PUBLIC_MAPTILER_API_KEY=
+# datagovmy Tileserver
+NEXT_PUBLIC_TILESERVER_URL=
 
 # Mixpanel
 MIXPANEL_TOKEN=
