--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.1.0",
     "react-leaflet": "^4.1.0",
-    "sharp": "^0.31.0"
+    "sharp": "^0.31.0",
+    "swr": "^2.1.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.2.4",
