--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "d3-scale-chromatic": "^3.0.0",
     "highlight.js": "^11.6.0",
     "leaflet": "^1.9.1",
+    "leaflet-easyprint": "^2.1.9",
     "lodash": "^4.17.21",
     "luxon": "^3.0.3",
     "mixpanel-browser": "^2.45.0",
