--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chartjs-plugin-annotation": "^2.0.1",
     "chartjs-plugin-crosshair": "^1.2.0",
     "d3-scale-chromatic": "^3.0.0",
+    "dom-to-image": "^2.6.0",
     "highlight.js": "^11.6.0",
     "leaflet": "^1.9.1",
     "leaflet-easyprint": "^2.1.9",
@@ -52,6 +53,7 @@
     "@tailwindcss/line-clamp": "^0.4.0",
     "@types/d3-scale": "^4.0.2",
     "@types/d3-shape": "^3.1.0",
+    "@types/dom-to-image": "^2.6.4",
     "@types/gtag.js": "^0.0.12",
     "@types/leaflet": "^1.8.0",
     "@types/lodash": "^4.14.185",
