feat: heatmap chart

--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^2.0.11",
     "@nivo/core": "^0.79.0",
-    "@nivo/heatmap": "^0.79.1",
     "@nivo/waffle": "^0.80.0",
     "@tanstack/match-sorter-utils": "^8.1.1",
     "@tanstack/react-table": "^8.5.2",
@@ -25,6 +24,7 @@
     "chart.js": "^3.9.1",
     "chartjs-adapter-luxon": "^1.2.0",
     "chartjs-chart-geo": "3.10.0",
+    "chartjs-chart-matrix": "^2.0.1",
     "chartjs-plugin-annotation": "^2.0.1",
     "chartjs-plugin-crosshair": "^1.2.0",
     "d3-scale-chromatic": "^3.0.0",
