--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "lint-staged": {
     "*.{js,ts,tsx,css,md}": "prettier --write"
   },
+  "sideEffects": false,
   "dependencies": {
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^2.0.11",
     "@nivo/core": "^0.79.0",
     "@nivo/waffle": "^0.80.0",
-    "@tanstack/match-sorter-utils": "^8.1.1",
-    "@tanstack/react-table": "^8.5.2",
+    "@tanstack/match-sorter-utils": "^8.8.4",
+    "@tanstack/react-table": "^8.8.5",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "chartjs-adapter-luxon": "^1.2.0",
