fix: lang switch resets state

--- a/package.json
+++ b/package.json
@@ -31,18 +31,20 @@
     "d3-scale-chromatic": "^3.0.0",
     "dom-to-image": "^2.6.0",
     "highlight.js": "^11.6.0",
+    "i18next": "^22.4.14",
     "leaflet": "^1.9.1",
     "leaflet-easyprint": "^2.1.9",
     "lodash": "^4.17.21",
     "luxon": "^3.0.3",
     "next": "^13.2.3",
-    "next-i18next": "^11.0.0",
+    "next-i18next": "^13.2.2",
     "next-pwa": "^5.6.0",
     "next-sitemap": "^3.1.23",
     "next-themes": "^0.2.1",
     "react": "18.1.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.1.0",
+    "react-i18next": "^12.2.0",
     "react-leaflet": "^4.1.0",
     "sharp": "^0.31.0"
   },
