--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next-pwa": "^5.6.0",
     "next-sitemap": "^3.1.23",
     "next-themes": "^0.2.1",
+    "plop": "^3.1.2",
     "react": "18.1.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.1.0",
