--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "i18next": "^22.4.14",
     "leaflet": "^1.9.1",
     "leaflet-easyprint": "^2.1.9",
+    "leaflet.markercluster": "^1.5.3",
     "lodash": "^4.17.21",
     "luxon": "^3.0.3",
     "next": "^13.2.3",
@@ -59,6 +60,7 @@
     "@types/dom-to-image": "^2.6.4",
     "@types/gtag.js": "^0.0.12",
     "@types/leaflet": "^1.8.0",
+    "@types/leaflet.markercluster": "^1.5.1",
     "@types/lodash": "^4.14.185",
     "@types/luxon": "^3.0.1",
     "@types/mixpanel-browser": "^2.38.1",
