--- a/apps/datagovmy/package.json
+++ b/apps/datagovmy/package.json
@@ -49,8 +49,6 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.2.4",
-    "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/line-clamp": "^0.4.0",
     "@types/d3-scale": "^4.0.2",
     "@types/d3-shape": "^3.1.0",
     "@types/dom-to-image": "^2.6.4",
@@ -70,8 +68,10 @@
     "postcss-nesting": "^10.1.10",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11",
-    "tailwindcss": "^3.1.2",
     "typescript": "^4.9.3",
-    "webpack": "^5.75.0"
+    "webpack": "^5.75.0",
+    "tailwindconfig": "*",
+    "tailwindcss": "*",
+    "tsconfig": "*"
   }
 }
