--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dom-to-image": "^2.6.0",
     "highlight.js": "^11.6.0",
     "i18next": "^22.4.14",
+    "inquirer-recursive": "^0.0.7",
     "leaflet": "^1.9.1",
     "leaflet-easyprint": "^2.1.9",
     "lodash": "^4.17.21",
