--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -5,7 +5,7 @@
   "description": "Malaysia's official open data portal.",
   "license": "MIT",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start"
