--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -6,8 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "next dev -p 3000",
-    "prebuild": "node script/fetch_i18n.js",
-    "build": "yarn prebuild && next build",
+    "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start"
   },
@@ -32,6 +31,7 @@
     "dom-to-image": "^2.6.0",
     "highlight.js": "^11.6.0",
     "i18next": "^22.4.14",
+    "i18next-http-backend": "^2.2.0",
     "leaflet": "^1.9.1",
     "leaflet-easyprint": "^2.1.9",
     "leaflet.markercluster": "^1.5.3",
