--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
+    "i18n": "node script/fetch_i18n.js",
     "postbuild": "next-sitemap",
     "start": "next start"
   },
@@ -64,6 +65,7 @@
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
+    "dotenv": "^16.0.3",
     "geojson-bbox": "^0.0.1",
     "postcss": "^8.4.14",
     "postcss-import": "^14.1.0",
