--- a/apps/app/.env.example
+++ b/apps/app/.env.example
@@ -1,8 +1,10 @@
 APP_URL=http://localhost:3000
+APP_ENV=development
 REVALIDATE_TOKEN=
 
 # datagovmy Frontend
 NEXT_PUBLIC_APP_URL=$APP_URL
+NEXT_PUBLIC_APP_ENV=$APP_ENV
 
 # datagovmy Backend
 NEXT_PUBLIC_AUTHORIZATION_TOKEN=
