feat: add domain aliasing to github action

--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -10,6 +10,10 @@ jobs:
   Deploy-Preview:
     runs-on: ubuntu-latest
     steps:
+      - name: Extract branch name
+        shell: bash
+        run: echo "branch=$(echo ${GITHUB_REF#refs/heads/} | sed -r 's,/,-,g')" >>$GITHUB_OUTPUT
+        id: extract_branch
       - uses: actions/checkout@v2
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
@@ -18,4 +22,6 @@ jobs:
       - name: Build Project Artifacts
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+        run: |
+          vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} > domain.txt
+          vercel alias --token=${{ secrets.VERCEL_TOKEN }} set `cat domain.txt` datagovmy-front-${{ steps.extract_branch.outputs.branch }}-datagovmy.vercel.app
