--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -24,4 +24,4 @@ jobs:
       - name: Deploy Project Artifacts to Vercel
         run: |
           vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} > domain.txt
-          vercel alias --token=${{ secrets.VERCEL_TOKEN }} set `cat domain.txt` datagovmy-front-${{ steps.extract_branch.outputs.branch }}-datagovmy.vercel.app
+          vercel alias --token=${{ secrets.VERCEL_TOKEN }} --scope=${{ secrets.VERCEL_SCOPE }} set `cat domain.txt` datagovmy-front-${{ steps.extract_branch.outputs.branch }}-datagovmy.vercel.app
