--- a/apps/app/public/manifest.json
+++ b/apps/app/public/manifest.json
@@ -5,8 +5,7 @@
     {
       "src": "/static/images/icons/android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "/static/images/icons/android-chrome-384x384.png",
