--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -53,6 +53,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.2.4",
+    "@types/cookie": "^0.5.1",
     "@types/d3-scale": "^4.0.2",
     "@types/d3-shape": "^3.1.0",
     "@types/dom-to-image": "^2.6.4",
@@ -67,6 +68,7 @@
     "@types/react-dom": "18.0.5",
     "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.7",
+    "cookie": "^0.5.0",
     "eslint": "^8.40.0",
     "eslint-config-datagovmy": "*",
     "geojson-bbox": "^0.0.1",
