fix: disable gha and reenable vercel integration

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-    "git": {
-        "deploymentEnabled": false
-    },
-    "github": {
-        "silent": true
-    }
+  "git": {
+    "deploymentEnabled": true
+  },
+  "github": {
+    "silent": false
+  }
 }
