--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -2,10 +2,10 @@ name: Vercel Preview Deployment
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-on:
-  push:
-    branches-ignore:
-      - main
+# on:
+#   push:
+#     branches-ignore:
+#       - main
 jobs:
   Deploy-Preview:
     runs-on: ubuntu-latest
