--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -2,10 +2,10 @@ name: Vercel Production Deployment
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
