fix: major refactor electiontable, election schema generator etc

--- a/apps/app/tsconfig.json
+++ b/apps/app/tsconfig.json
@@ -12,5 +12,5 @@
       "@config/*": ["config/*"]
     }
   },
-  "exclude": ["node_modules", ".next"]
+  "exclude": ["node_modules", ".next", ".turbo"]
 }
