--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -64,8 +64,8 @@
     "@types/luxon": "^3.0.1",
     "@types/mixpanel-browser": "^2.38.1",
     "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.5",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.7",
     "cookie": "^0.5.0",
