--- a/packages/datagovmy-nextra/package.json
+++ b/packages/datagovmy-nextra/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nextra-theme-docs",
-  "version": "2.6.1",
+  "name": "datagovmy-nextra",
+  "version": "0.0.1",
   "description": "A Nextra theme for documentation sites.",
   "repository": "https://github.com/shuding/nextra",
   "author": "Shu Ding <g@shud.in>",
@@ -26,28 +26,28 @@
   ],
   "scripts": {
     "build": "tsup",
-    "build:all": "pnpm build && pnpm build:tailwind",
-    "build:tailwind": "pnpm postcss css/styles.css -o style.css --verbose",
+    "build:all": "yarn build && yarn build:tailwind",
+    "build:tailwind": "yarn postcss css/styles.css -o style.css --verbose",
     "clean": "rimraf ./dist ./style.css",
-    "dev": "concurrently \"pnpm dev:layout\" \"pnpm dev:tailwind\"",
+    "dev": "concurrently \"yarn dev:layout\" \"yarn dev:tailwind\"",
     "dev:layout": "tsup --watch",
-    "dev:tailwind": "TAILWIND_MODE=watch pnpm postcss css/styles.css -o style.css --watch",
-    "prepublishOnly": "pnpm build:all",
+    "dev:tailwind": "TAILWIND_MODE=watch yarn postcss css/styles.css -o style.css --watch",
+    "prepublishOnly": "yarn build:all",
     "test": "vitest --run",
     "types": "tsup --dts-only",
     "types:check": "tsc --noEmit"
   },
   "peerDependencies": {
-    "next": ">=9.5.3",
+    "next": ">=13.4.3",
     "nextra": "workspace:*",
-    "react": ">=16.13.1",
-    "react-dom": ">=16.13.1"
+    "react": ">=18.2.0",
+    "react-dom": ">=18.2.0"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.10",
     "@popperjs/core": "^2.11.6",
     "clsx": "^1.2.1",
-    "flexsearch": "^0.7.21",
+    "flexsearch": "^0.7.31",
     "focus-visible": "^5.2.0",
     "git-url-parse": "^13.1.0",
     "intersection-observer": "^0.12.2",
@@ -62,7 +62,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/flexsearch": "^0.7.3",
     "@types/git-url-parse": "^9.0.1",
-    "@types/react": "^18.0.15",
+    "@types/react": "^18.2.0",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^3.0.1",
     "concurrently": "^7.4.0",
@@ -76,6 +76,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.1",
+    "tsup": "^6.7.0",
     "vitest": "^0.31.0"
   },
   "sideEffects": [
