chore: i18n and accordion kiv fix

--- a/apps/app/tsconfig.json
+++ b/apps/app/tsconfig.json
@@ -9,6 +9,7 @@
       "@hooks/*": ["hooks/*"],
       "@dashboards/*": ["dashboards/*"],
       "@data-catalogue/*": ["data-catalogue/*"],
+      "@misc/*": ["misc/*"],
       "@config/*": ["config/*"]
     }
   },
