--- a/packages/datagovmy-nextra/package.json
+++ b/packages/datagovmy-nextra/package.json
@@ -1,12 +1,11 @@
 {
   "name": "datagovmy-nextra",
   "version": "0.0.1",
-  "description": "A Nextra theme for documentation sites.",
-  "repository": "https://github.com/shuding/nextra",
-  "author": "Shu Ding <g@shud.in>",
+  "description": "A Nextra theme for data.gov.my Docs",
+  "author": "irfanismail",
   "license": "MIT",
   "exports": {
-    "./style.css": "./style.css",
+    "./style.css": "./dist/style.css",
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
@@ -21,24 +20,23 @@
     }
   },
   "files": [
-    "dist",
-    "style.css"
+    "dist"
   ],
   "scripts": {
     "build": "tsup",
     "build:all": "yarn build && yarn build:tailwind",
-    "build:tailwind": "yarn postcss css/styles.css -o style.css --verbose",
+    "build:tailwind": "yarn postcss css/styles.css -o dist/style.css --verbose",
     "clean": "rimraf ./dist ./style.css",
     "dev": "concurrently \"yarn dev:layout\" \"yarn dev:tailwind\"",
     "dev:layout": "tsup --watch",
-    "dev:tailwind": "TAILWIND_MODE=watch yarn postcss css/styles.css -o style.css --watch",
+    "dev:tailwind": "TAILWIND_MODE=watch yarn postcss css/styles.css -o dist/style.css --watch",
     "prepublishOnly": "yarn build:all",
     "test": "vitest --run",
     "types": "tsup --dts-only",
     "types:check": "tsc --noEmit"
   },
   "peerDependencies": {
-    "next": ">=13.4.3",
+    "next": ">=13.4.2",
     "nextra": "workspace:*",
     "react": ">=18.2.0",
     "react-dom": ">=18.2.0"
@@ -47,7 +45,7 @@
     "@headlessui/react": "^1.7.10",
     "@popperjs/core": "^2.11.6",
     "clsx": "^1.2.1",
-    "flexsearch": "^0.7.31",
+    "flexsearch": "0.7.0",
     "focus-visible": "^5.2.0",
     "git-url-parse": "^13.1.0",
     "intersection-observer": "^0.12.2",
