--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -12,10 +12,9 @@
   },
   "sideEffects": false,
   "dependencies": {
-    "next": "^13.4.2",
-    "nextra": "^2.6.2",
-    "nextra-theme-docs": "^2.6.2",
     "datagovmy-nextra": "*",
+    "next": "13.4.3",
+    "nextra": "^2.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
