--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "autoprefixer": "^10.4.14",
     "eslint-config-datagovmy": "*",
     "husky": ">=6",
+    "inquirer-recursive": "^0.0.7",
     "lint-staged": ">=10",
+    "plop": "^3.1.2",
     "postcss": "^8.4.21",
     "prettier": "latest",
     "tailwindcss": "^3.3.1",
