--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -50,6 +50,7 @@
     "react-i18next": "^12.2.0",
     "react-leaflet": "^4.1.0",
     "react-slick": "^0.29.0",
+    "react-virtualized-auto-sizer": "^1.0.20",
     "react-window": "^1.8.9",
     "sharp": "^0.31.0",
     "sonner": "^0.4.0"
