--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-table": "^8.8.5",
     "@types/react-window": "^1.8.5",
     "axios": "^0.27.2",
+    "canvas2svg": "^1.0.16",
     "chart.js": "^3.9.1",
     "chartjs-adapter-luxon": "^1.2.0",
     "chartjs-chart-geo": "3.10.0",
