feat: init test workspace

--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -6,6 +6,7 @@
     "base.json",
     "nextjs.json",
     "react-library.json",
+    "playwright.json",
     "tailwindcss.js",
     "postcss.js"
   ],
