--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "workspaces": [
     "apps/*",
-    "packages/*"
+    "packages/*",
+    "tests/*"
   ],
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
+    "e2e:dev": "turbo run e2e:dev",
+    "e2e:prod": "turbo run e2e:prod",
     "prepare": "husky install",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
@@ -26,7 +29,7 @@
     "postcss": "^8.4.21",
     "prettier": "latest",
     "tailwindcss": "^3.3.1",
-    "turbo": "latest",
+    "turbo": "^1.10.2",
     "typescript": "^5.1.3"
   },
   "engines": {
