--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@ node_modules/
 
 # testing
 /coverage
+test-results/
+playwright-report/
+playwright/.cache/
+tests/playground/
+*-snapshots/
 
 # next.js
 .next/
