--- a/apps/docs/.env.example
+++ b/apps/docs/.env.example
@@ -1,5 +1,7 @@
 APP_URL=http://localhost:3001
 APP_ENV=development
+AUTHORIZATION_TOKEN=
 
 NEXT_PUBLIC_APP_URL=$APP_URL
 NEXT_PUBLIC_APP_ENV=$APP_ENV
+NEXT_PUBLIC_AUTHORIZATION_TOKEN=$AUTHORIZATION_TOKEN
