--- a/.github/workflows/e2e.vercel.yaml
+++ b/.github/workflows/e2e.vercel.yaml
@@ -16,7 +16,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           max_timeout: 600
           allow_inactive: true
-          environment: Preview - datagovmy-front
+          environment: Preview – datagovmy-front
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
