--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -11,6 +11,16 @@ jobs:
     env:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
       TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
+      # Environment
+      AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
+      REVALIDATE_TOKEN: ${{ secrets.REVALIDATE_TOKEN }}
+      NEXT_PUBLIC_APP_ENV: ${{ vars.NEXT_PUBLIC_APP_ENV }}
+      NEXT_PUBLIC_APP_URL: ${{ vars.NEXT_PUBLIC_APP_URL }}
+      NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
+      NEXT_PUBLIC_AUTHORIZATION_TOKEN: ${{ secrets.NEXT_PUBLIC_AUTHORIZATION_TOKEN }}
+      NEXT_PUBLIC_GA_TAG: ${{ secrets.NEXT_PUBLIC_GA_TAG }}
+      NEXT_PUBLIC_MIXPANEL_TOKEN: ${{ secrets.NEXT_PUBLIC_MIXPANEL_TOKEN }}
+      NEXT_PUBLIC_TILESERVER_URL: ${{ secrets.NEXT_PUBLIC_TILESERVER_URL }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -21,18 +31,20 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Install Playwright & Chromium
         run: npx playwright install chromium
+      - name: "[debug]"
+        run: |
+          echo "AUTH_TOKEN : $AUTH_TOKEN"
+          echo "REVALIDATE_TOKEN : $REVALIDATE_TOKEN"
+          echo "NEXT_PUBLIC_APP_ENV : $NEXT_PUBLIC_APP_ENV"
+          echo "NEXT_PUBLIC_APP_URL : $NEXT_PUBLIC_APP_URL"
+          echo "NEXT_PUBLIC_API_URL : $NEXT_PUBLIC_API_URL"
+          echo "NEXT_PUBLIC_AUTHORIZATION_TOKEN : $NEXT_PUBLIC_AUTHORIZATION_TOKEN"
+          echo "NEXT_PUBLIC_GA_TAG : $NEXT_PUBLIC_GA_TAG"
+          echo "NEXT_PUBLIC_MIXPANEL_TOKEN : $NEXT_PUBLIC_MIXPANEL_TOKEN"
+          echo "NEXT_PUBLIC_TILESERVER_URL : $NEXT_PUBLIC_TILESERVER_URL"
       - name: Run Playwright tests
         run: yarn e2e:prod
-        env:
-          AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
-          REVALIDATE_TOKEN: ${{ secrets.REVALIDATE_TOKEN }}
-          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
-          NEXT_PUBLIC_APP_ENV: ${{ vars.NEXT_PUBLIC_APP_ENV }}
-          NEXT_PUBLIC_APP_URL: ${{ vars.NEXT_PUBLIC_APP_URL }}
-          NEXT_PUBLIC_AUTHORIZATION_TOKEN: ${{ secrets.NEXT_PUBLIC_AUTHORIZATION_TOKEN }}
-          NEXT_PUBLIC_GA_TAG: ${{ secrets.NEXT_PUBLIC_GA_TAG }}
-          NEXT_PUBLIC_MIXPANEL_TOKEN: ${{ secrets.NEXT_PUBLIC_MIXPANEL_TOKEN }}
-          NEXT_PUBLIC_TILESERVER_URL: ${{ secrets.NEXT_PUBLIC_TILESERVER_URL }}
+
       - uses: actions/upload-artifact@v3
         if: always()
         with:
