--- a/.github/workflows/e2e.staging.yaml
+++ b/.github/workflows/e2e.staging.yaml
@@ -9,7 +9,7 @@ jobs:
   e2e-test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
-    environment: Preview - datagovmy-front
+    environment: Preview – datagovmy-front
     env:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
       TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
