--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "e2e:dev": "turbo run e2e:dev",
-    "e2e:prod": "turbo run e2e:prod",
-    "e2e:vercel": "turbo run e2e:vercel",
+    "e2e:test": "turbo run e2e:test",
     "prepare": "husky install",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
