--- a/packages/datagovmy-nextra/package.json
+++ b/packages/datagovmy-nextra/package.json
@@ -5,7 +5,7 @@
   "author": "irfanismail",
   "license": "MIT",
   "exports": {
-    "./style.css": "./dist/style.css",
+    "./style.css": "./style.css",
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
@@ -20,7 +20,8 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "style.css"
   ],
   "scripts": {
     "build": "tsup",
