--- a/apps/kkmnow/package.json
+++ b/apps/kkmnow/package.json
@@ -37,8 +37,8 @@
     "@types/lodash": "^4.14.185",
     "@types/luxon": "^3.0.1",
     "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.5",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.7",
     "postcss": "*",
     "postcss-import": "^14.1.0",
