fix: remove husky in kkmnow

--- a/apps/kkmnow/package.json
+++ b/apps/kkmnow/package.json
@@ -8,8 +8,7 @@
     "dev": "next dev -p 3003",
     "build": "next build",
     "postbuild": "next-sitemap",
-    "start": "next start",
-    "prepare": "husky install"
+    "start": "next start"
   },
   "lint-staged": {
     "*.{js,ts,tsx,css,md}": "prettier --write"
