--- a/apps/kkmnow/package.json
+++ b/apps/kkmnow/package.json
@@ -13,6 +13,9 @@
   "lint-staged": {
     "*.{js,ts,tsx,css,md}": "prettier --write"
   },
+  "files": [
+    "next-i18next.config.js"
+  ],
   "dependencies": {
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^2.0.11",
@@ -20,12 +23,14 @@
     "@tanstack/react-table": "^8.5.2",
     "axios": "^0.27.2",
     "datagovmy-ui": "*",
+    "i18next-http-backend": "^2.2.0",
     "lodash": "^4.17.21",
     "luxon": "^3.0.3",
     "next": "^13.4.3",
     "next-i18next": "^13.2.2",
     "next-pwa": "^5.6.0",
     "next-sitemap": "^3.1.23",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
