--- a/packages/datagovmy-ui/package.json
+++ b/packages/datagovmy-ui/package.json
@@ -8,16 +8,25 @@
     "types"
   ],
   "exports": {
+    "./api": "./src/lib/api.ts",
     "./charts/*": "./src/charts/*.tsx",
     "./components": "./src/components/index.ts",
     "./contexts/*": "./src/contexts/*.tsx",
     "./decorators": "./src/lib/decorators.ts",
+    "./geojson/*": "./src/lib/geojson/*/*.ts",
     "./helpers": "./src/lib/helpers.ts",
     "./hooks": "./src/hooks/index.ts",
-    "./geojson/*": "./src/lib/geojson/*/*.ts"
+    "./i18n": "./src/i18n/index.cjs",
+    "./icons": "./src/icons/index.tsx",
+    "./icons/agency": "./src/icons/agency.tsx",
+    "./types": "./types/index.d.ts",
+    "./styles": "./src/styles/globals.css"
   },
   "typesVersions": {
     "*": {
+      "api": [
+        "./src/lib/api.ts"
+      ],
       "charts/*": [
         "./src/charts/*.tsx"
       ],
@@ -26,6 +35,15 @@
       ],
       "contexts/*": [
         "./src/contexts/*.tsx"
+      ],
+      "i18n": [
+        "./types/i18n.d.ts"
+      ],
+      "icons": [
+        "./types/icons.d.ts"
+      ],
+      "icons/agency": [
+        "./types/icons.agency.d.ts"
       ],
       "decorators": [
         "./types/decorators.d.ts"
@@ -62,6 +80,7 @@
     "dom-to-image": "^2.6.0",
     "highlight.js": "^11.6.0",
     "i18next": "^22.4.14",
+    "i18next-http-backend": "^2.2.0",
     "leaflet": "^1.9.1",
     "leaflet-easyprint": "^2.1.9",
     "leaflet.markercluster": "^1.5.3",
