--- a/apps/opendosm/tsconfig.json
+++ b/apps/opendosm/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2015",
+    "target": "ESNext",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -18,7 +18,6 @@
     "paths": {
       "@components/*": ["components/*"],
       "@lib/*": ["lib/*"],
-      "@hooks/*": ["hooks/*"],
       "@dashboards/*": ["dashboards/*"],
       "@data-catalogue/*": ["data-catalogue/*"],
       "@config/*": ["config/*"]
