feat: move under /dashboard/*

--- a/apps/opendosm/.env.example
+++ b/apps/opendosm/.env.example
@@ -1,23 +1,20 @@
-APP_URL=http://localhost:3000
+APP_URL=http://localhost:3002
 REVALIDATE_TOKEN=
+AUTHORIZATION_TOKEN=
 
 # Aksara Frontend
 NEXT_PUBLIC_APP_URL=$APP_URL
 
 # Aksara Backend
-NEXT_PUBLIC_AUTHORIZATION_TOKEN=
+NEXT_PUBLIC_AUTHORIZATION_TOKEN=$AUTHORIZATION_TOKEN
 NEXT_PUBLIC_API_URL=
 
-# Google ?
-NEXT_PUBLIC_GMAP_API_KEY=
+# Google Analytics
 NEXT_PUBLIC_GA_TAG=
-
-# OpenSourceMap
-NEXT_PUBLIC_MAPTILER_API_KEY=
 
 # Mixpanel
 MIXPANEL_TOKEN=
-MIXPANEL_PROJECT_ID=
-MIXPANEL_SA_USER=
-MIXPANEL_SA_SECRET=
 NEXT_PUBLIC_MIXPANEL_TOKEN=$MIXPANEL_TOKEN
+
+# Bundle Analyzer
+ANALYZE=
