--- a/apps/kkmnow/.env.example
+++ b/apps/kkmnow/.env.example
@@ -2,5 +2,16 @@ APP_URL=
 REVALIDATE_TOKEN=
 AUTHORIZATION_TOKEN=
 
+NEXT_PUBLIC_APP_URL=$APP_URL
+NEXT_PUBLIC_AUTHORIZATION_TOKEN=$AUTHORIZATION_TOKEN
 NEXT_PUBLIC_API_URL=
-NEXT_PUBLIC_AUTHORIZATION_TOKEN=
+
+# Google Analytics
+NEXT_PUBLIC_GA_TAG=
+
+# Mixpanel
+MIXPANEL_TOKEN=
+NEXT_PUBLIC_MIXPANEL_TOKEN=$MIXPANEL_TOKEN
+
+# Bundle Analyzer
+ANALYZE=
