--- a/packages/datagovmy-nextra/package.json
+++ b/packages/datagovmy-nextra/package.json
@@ -9,13 +9,17 @@
     ".": {
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
-    }
+    },
+    "./api": "./src/utils/api.ts"
   },
   "types": "./dist/index.d.ts",
   "typesVersions": {
     "*": {
       ".": [
         "./dist/index.d.ts"
+      ],
+      "api": [
+        "./src/utils/api.ts"
       ]
     }
   },
@@ -44,7 +48,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.10",
+    "@heroicons/react": "^2.0.11",
     "@popperjs/core": "^2.11.6",
+    "axios": "^0.27.2",
     "clsx": "^1.2.1",
     "flexsearch": "0.7.21",
     "focus-visible": "^5.2.0",
@@ -53,6 +59,7 @@
     "match-sorter": "^6.3.1",
     "next-seo": "^6.0.0",
     "next-themes": "^0.2.1",
+    "react-markdown": "^8.0.7",
     "scroll-into-view-if-needed": "^3.0.0",
     "zod": "^3.20.2"
   },
