--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -52,6 +52,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
     "react-leaflet": "^4.1.0",
+    "react-markdown": "^8.0.7",
     "react-slick": "^0.29.0",
     "react-virtualized-auto-sizer": "^1.0.20",
     "react-window": "^1.8.9",
