--- a/packages/datagovmy-ui/package.json
+++ b/packages/datagovmy-ui/package.json
@@ -134,7 +134,8 @@
     "react-i18next": "^12.2.0",
     "react-leaflet": "^4.1.0",
     "react-window": "^1.8.9",
-    "sonner": "^0.4.0"
+    "sonner": "^0.4.0",
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
