--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -42,6 +42,7 @@
     "leaflet.markercluster": "^1.5.3",
     "lodash": "^4.17.21",
     "luxon": "^3.0.3",
+    "mitt": "^3.0.1",
     "next": "^13.4.3",
     "next-i18next": "^13.2.2",
     "next-pwa": "^5.6.0",
