--- a/apps/opendosm/.env.example
+++ b/apps/opendosm/.env.example
@@ -1,6 +1,7 @@
 APP_URL=http://localhost:3002
 REVALIDATE_TOKEN=
 AUTHORIZATION_TOKEN=
+EDGE_CONFIG=
 
 # Aksara Frontend
 NEXT_PUBLIC_APP_URL=$APP_URL
