--- a/apps/opendosm/package.json
+++ b/apps/opendosm/package.json
@@ -20,6 +20,7 @@
     "@heroicons/react": "^2.0.11",
     "@tanstack/match-sorter-utils": "^8.1.1",
     "@tanstack/react-table": "^8.5.2",
+    "@vercel/edge-config": "^0.2.1",
     "axios": "^0.27.2",
     "datagovmy-ui": "*",
     "i18next": "^22.4.14",
