--- a/apps/app/.env.example
+++ b/apps/app/.env.example
@@ -1,6 +1,7 @@
 APP_URL=http://localhost:3000
 APP_ENV=development
 REVALIDATE_TOKEN=
+EDGE_CONFIG=
 
 # datagovmy Frontend
 NEXT_PUBLIC_APP_URL=$APP_URL
