--- a/apps/kkmnow/.env.example
+++ b/apps/kkmnow/.env.example
@@ -1,6 +1,7 @@
 APP_URL=
 REVALIDATE_TOKEN=
 AUTHORIZATION_TOKEN=
+EDGE_CONFIG=
 
 NEXT_PUBLIC_APP_URL=$APP_URL
 NEXT_PUBLIC_AUTHORIZATION_TOKEN=$AUTHORIZATION_TOKEN
