feat: ai helper done

--- a/apps/app/.env.example
+++ b/apps/app/.env.example
@@ -11,6 +11,9 @@ NEXT_PUBLIC_APP_ENV=$APP_ENV
 NEXT_PUBLIC_AUTHORIZATION_TOKEN=
 NEXT_PUBLIC_API_URL=
 
+# datagovmy AI
+NEXT_PUBLIC_AI_URL=
+
 NEXT_PUBLIC_GA_TAG=
 
 # datagovmy Tileserver
