--- a/packages/datagovmy-ui/package.json
+++ b/packages/datagovmy-ui/package.json
@@ -100,6 +100,7 @@
     }
   },
   "dependencies": {
+    "@floating-ui/react": "^0.25.1",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.11",
     "@nivo/core": "^0.79.0",
@@ -107,6 +108,7 @@
     "@radix-ui/react-slider": "^1.1.1",
     "@tanstack/match-sorter-utils": "^8.8.4",
     "@tanstack/react-table": "^8.8.5",
+    "@tanstack/react-virtual": "^3.0.0-beta.54",
     "axios": "^0.27.2",
     "canvas2svg": "^1.0.16",
     "chart.js": "^3.9.1",
@@ -135,7 +137,8 @@
     "react-leaflet": "^4.1.0",
     "react-markdown": "^8.0.7",
     "react-window": "^1.8.9",
-    "sonner": "^0.4.0"
+    "sonner": "^0.4.0",
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
