--- a/packages/datagovmy-ui/package.json
+++ b/packages/datagovmy-ui/package.json
@@ -23,8 +23,7 @@
     "./helpers": "./src/lib/helpers.ts",
     "./hooks": "./src/hooks/index.ts",
     "./i18n": "./src/i18n/index.cjs",
-    "./icons": "./src/icons/index.tsx",
-    "./icons/agency": "./src/icons/agency.tsx",
+    "./icons/*": "./src/icons/*.tsx",
     "./mixpanel": "./src/lib/mixpanel.ts",
     "./options": "./src/lib/options.ts",
     "./schema/*": "./src/lib/schema/*.tsx",
@@ -55,11 +54,8 @@
       "i18n": [
         "./types/i18n.d.ts"
       ],
-      "icons": [
-        "./src/icons/index.tsx"
-      ],
-      "icons/agency": [
-        "./src/icons/agency.tsx"
+      "icons/*": [
+        "./src/icons/*"
       ],
       "constants": [
         "./types/constants.d.ts"
