add household debt dashboard

--- a/apps/opendosm/tsconfig.json
+++ b/apps/opendosm/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "tsconfig/nextjs.json",
   "compilerOptions": {
     "target": "ESNext",
     "lib": ["dom", "dom.iterable", "esnext"],
