use monorepo root vercel.json instead

--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,19 @@
   },
   "github": {
     "silent": false
+  },
+  "functions": {
+    "apps/opendosm/pages/publications/**/*": {
+      "maxDuration": 5
+    },
+    "apps/opendosm/pages/data-catalogue/**/*": {
+      "maxDuration": 5
+    },
+    "apps/app/pages/dashboard/index.tsx": {
+      "maxDuration": 5
+    },
+    "apps/app/pages/data-catalogue/**/*": {
+      "maxDuration": 5
+    }
   }
 }
