add i18n in env example

--- a/apps/app/.env.example
+++ b/apps/app/.env.example
@@ -10,6 +10,7 @@ NEXT_PUBLIC_APP_ENV=$APP_ENV
 # datagovmy Backend
 NEXT_PUBLIC_AUTHORIZATION_TOKEN=
 NEXT_PUBLIC_API_URL=
+NEXT_PUBLIC_I18N_URL=https://dlz3uh7rpztx1.cloudfront.net
 
 # datagovmy AI
 NEXT_PUBLIC_AI_URL=
