--- a/apps/kkmnow/.env.example
+++ b/apps/kkmnow/.env.example
@@ -6,6 +6,7 @@ EDGE_CONFIG=
 NEXT_PUBLIC_APP_URL=$APP_URL
 NEXT_PUBLIC_AUTHORIZATION_TOKEN=$AUTHORIZATION_TOKEN
 NEXT_PUBLIC_API_URL=
+NEXT_PUBLIC_I18N_URL=https://dlz3uh7rpztx1.cloudfront.net
 
 # Google Analytics
 NEXT_PUBLIC_GA_TAG=
