--- a/apps/opendosm/.env.example
+++ b/apps/opendosm/.env.example
@@ -5,6 +5,7 @@ EDGE_CONFIG=
 
 # Aksara Frontend
 NEXT_PUBLIC_APP_URL=$APP_URL
+NEXT_PUBLIC_I18N_URL=https://dlz3uh7rpztx1.cloudfront.net
 
 # Aksara Backend
 NEXT_PUBLIC_AUTHORIZATION_TOKEN=$AUTHORIZATION_TOKEN
