--- a/packages/datagovmy-ui/package.json
+++ b/packages/datagovmy-ui/package.json
@@ -30,6 +30,7 @@
     "./i18n": "./src/i18n/index.cjs",
     "./icons": "./src/icons/index.tsx",
     "./icons/*": "./src/icons/*.tsx",
+    "./misc": "./src/misc/index.tsx",
     "./mixpanel": "./src/lib/mixpanel.ts",
     "./options": "./src/lib/options.ts",
     "./schema/*": "./src/lib/schema/*.tsx",
@@ -104,6 +105,9 @@
       ],
       "geojson/state/*": [
         "./src/lib/geojson/state/*.ts"
+      ],
+      "misc": [
+        "./types/misc.d.ts"
       ],
       "mixpanel": [
         "./src/lib/mixpanel.ts"
