feat: integrate tinybird download count for opendosm pub

--- a/apps/app/.env.example
+++ b/apps/app/.env.example
@@ -11,6 +11,7 @@ NEXT_PUBLIC_APP_ENV=$APP_ENV
 NEXT_PUBLIC_AUTHORIZATION_TOKEN=
 NEXT_PUBLIC_API_URL=
 NEXT_PUBLIC_I18N_URL=https://dlz3uh7rpztx1.cloudfront.net
+NEXT_PUBLIC_TINYBIRD_TOKEN=
 
 # datagovmy AI
 NEXT_PUBLIC_AI_URL=
