--- a/apps/opendosm/.env.example
+++ b/apps/opendosm/.env.example
@@ -10,6 +10,7 @@ NEXT_PUBLIC_I18N_URL=https://dlz3uh7rpztx1.cloudfront.net
 # Aksara Backend
 NEXT_PUBLIC_AUTHORIZATION_TOKEN=$AUTHORIZATION_TOKEN
 NEXT_PUBLIC_API_URL=
+NEXT_PUBLIC_TINYBIRD_TOKEN=
 
 # Google Analytics
 NEXT_PUBLIC_GA_TAG=
