add missing env in turbo.json

--- a/turbo.json
+++ b/turbo.json
@@ -13,7 +13,9 @@
         "NEXT_PUBLIC_APP_URL",
         "NEXT_PUBLIC_APP_ENV",
         "NEXT_PUBLIC_AUTHORIZATION_TOKEN",
-        "NEXT_PUBLIC_TILESERVER_URL"
+        "NEXT_PUBLIC_TILESERVER_URL",
+        "NEXT_PUBLIC_TINYBIRD_TOKEN",
+        "NEXT_PUBLIC_TINYBIRD_URL"
       ],
       "outputMode": "new-only",
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
