--- a/apps/app/.env.example
+++ b/apps/app/.env.example
@@ -12,6 +12,7 @@ NEXT_PUBLIC_AUTHORIZATION_TOKEN=
 NEXT_PUBLIC_API_URL=
 NEXT_PUBLIC_I18N_URL=https://dlz3uh7rpztx1.cloudfront.net
 NEXT_PUBLIC_TINYBIRD_TOKEN=
+NEXT_PUBLIC_TINYBIRD_URL=
 
 # datagovmy AI
 NEXT_PUBLIC_AI_URL=
