--- a/apps/kkmnow/.env.example
+++ b/apps/kkmnow/.env.example
@@ -8,6 +8,7 @@ NEXT_PUBLIC_AUTHORIZATION_TOKEN=$AUTHORIZATION_TOKEN
 NEXT_PUBLIC_API_URL=
 NEXT_PUBLIC_I18N_URL=https://dlz3uh7rpztx1.cloudfront.net
 NEXT_PUBLIC_TINYBIRD_TOKEN=
+NEXT_PUBLIC_TINYBIRD_URL=
 
 # Google Analytics
 NEXT_PUBLIC_GA_TAG=
