--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lint-staged": ">=10",
     "plop": "^3.1.2",
     "postcss": "^8.4.31",
-    "prettier": "latest",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.3.1",
     "turbo": "^1.10.2",
     "typescript": "^5.1.3"
