Dgmy/refactor/car popularity (#489)
* feat: vehicle registration dashboard

* fix: make value optional

* feat: add car comparison

* chore: add vehicle registrations namespace

* chore: add downshift, react-virtual, upgrade annotation

* refactor: use downshift, react-virtual

* feat: multiple combobox component

* fix: adjust overlap annotations

* fix: since year-5 callout

* fix: colours

* fix: sort order

* fix: increase x-axis tick padding

* style: tabular nums

* fix: increase padding

* fix: add ref, increase gap btwn annotation

* fix: meta, default data

* chore: change order

* fix: add data as of

* chore: fix html element type

* fix: static not ssr

---------

Co-authored-by: data.gov.my <127065101+data-gov-my@users.noreply.github.com>
Co-authored-by: Amaluddin Asyraf <57763629+amalasyrafs@users.noreply.github.com>
Co-authored-by: 嘉欣 <e_jaxx@hotmail.com>

--- a/packages/datagovmy-ui/package.json
+++ b/packages/datagovmy-ui/package.json
@@ -139,11 +139,12 @@
     "chartjs-adapter-luxon": "^1.2.0",
     "chartjs-chart-geo": "3.10.0",
     "chartjs-chart-matrix": "^2.0.1",
-    "chartjs-plugin-annotation": "^2.0.1",
+    "chartjs-plugin-annotation": "^2.2.1",
     "chartjs-plugin-crosshair": "^1.2.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "d3-scale-chromatic": "^3.0.0",
     "dom-to-image": "^2.6.0",
+    "downshift": "^9.0.4",
     "geojson-bbox": "^0.0.1",
     "highlight.js": "^11.6.0",
     "i18next": "^22.4.14",
@@ -161,6 +162,7 @@
     "react-i18next": "^12.2.0",
     "react-leaflet": "^4.1.0",
     "react-markdown": "^8.0.7",
+    "react-virtual": "^2.10.4",
     "react-window": "^1.8.9",
     "sonner": "^0.4.0",
     "tailwind-merge": "^1.14.0"
