add new devdependencies

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "*.{js,ts,tsx,css,md}": "prettier --write"
   },
   "devDependencies": {
+    "@types/ua-parser-js": "^0.7.39",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.14",
     "eslint-config-datagovmy": "*",
     "husky": ">=6",
@@ -35,6 +37,8 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "dependencies": {},
-  "packageManager": "yarn@1.22.19"
+  "packageManager": "yarn@1.22.19",
+  "dependencies": {
+    "ua-parser-js": "^1.0.38"
+  }
 }
